# agentic-server

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
.githooks/: pre-commit
.github/: copilot-instructions.md  git-commit-instructions.md
.github/instructions/: pytest.instructions.md  python.instructions.md
.github/prompts/: doc-comments.prompt.md
.github/workflows/: main-ghcr-publish.yml  pr-ci.yml
docs/: index.md
docs/api/: index.md
docs/architecture/: build.md  index.md
docs/architecture/code/: cli.md
docs/guide/: configuration.md  getting_started.md  index.md
docs/specs/: openapi_health.json
experiments/: pdf_coverter_v01.py
src/: main.py
src/api/: __init__.py  errors.py  server.py
src/api/health/: __init__.py  handlers.py
src/config/: __init__.py  settings.py
src/fine_tuner/: __init__.py  application.py  parser.py
src/scripts/: generate_schema.py
tests/api/: conftest.py  test_error_handlers.py  test_health_check_api.py  test_no_docs.py
tests/unit/: test_cli.py
