[project]
name = "resume-fine-tuner-svc"
version = "0.1.0"
description = "API server for Agentic, a framework for resume fune tuning"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.2",
    "uvicorn>=0.30.0",
    "mcp>=1.0.0",
    "click>=8.1.0",
    "docling>=2.72.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "pytest>=9.0.2",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "httpx>=0.27.0",
    "neoteroi-mkdocs>=1.2.0",
    "pymdown-extensions>=10.20.1",
    "mkdocs-click>=0.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py312" # Targeted stable until 3.14 is explicit in ruff

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "SIM", "UP"]
ignore = [
    "E501", # line too long (handled by formatter)
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]  # If used by docling

[tool.uv]
index-strategy = "unsafe-best-match"
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
